# adams_website

./: .gitignore  Dockerfile  README.md  compose.yaml  compose_prod.yaml  entrypoint.sh  pyproject.toml  requirements.txt
compose/local/: Dockerfile  entrypoint.sh  requirements.txt
compose/production/: Dockerfile  entrypoint.sh  requirements.txt
mysite/: conftest.py  pytest.ini
mysite/aircrafts/: models.py  urls.py  views.py
mysite/aircrafts/migrations/: 0001_initial.py
mysite/game_memory/: apps.py  urls.py
mysite/games/: models.py  urls.py  views.py
mysite/games/migrations/: 0001_initial.py
mysite/memory/: apps.py  urls.py
mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
mysite/mysite/settings/: base.py  local.py  production.py
mysite/static/game_memory/js/: main.js
mysite/templates/: base.html
mysite/templates/aircrafts/: aircraft_confirm_delete.html  aircraft_detail.html  aircraft_form.html  aircraft_list.html  aircraft_update_form.html  engine_category_detail.html  enginecategory_confirm_delete.html  enginecategory_list.html  enginecategory_update_form.html  manufacturer_confirm_delete.html  manufacturer_detail.html  manufacturer_form.html  manufacturer_list.html  manufacturer_update_form.html
mysite/templates/game_memory/: game_memory.html
mysite/templates/games/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  category_update_form.html  chapter_confirm_delete.html  chapter_form.html  chapter_list.html  chapter_update_form.html  character_confirm_delete.html  character_detail.html  character_form.html  character_list.html  game_confirm_delete.html  game_detail.html  game_form.html  game_list.html  game_update_form.html
mysite/templates/pages/: home.html
mysite/templates/webgames/memory/: memory.html
mysite/users/: admin.py  apps.py  models.py  views.py
mysite/users/migrations/: 0001_initial.py
mysite/users/tests/: factories.py  test_views.py
mysite/webgames/: apps.py  urls.py
mysite/webgames/static/memory/css/: style.css
mysite/webgames/static/memory/js/: card.js  game.js  main.js
