[tool.poetry]
name = "adams-website"
version = "0.1.0"
description = ""
authors = ["raf-lim <raf.sukiennik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^22.0.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
