[tool.poetry]
name = "adams-website"
version = "0.1.0"
description = ""
authors = ["raf-lim <raf.sukiennik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^22.0.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
django-allauth = "^0.63.2"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
pillow = "^10.4.0"
collectfast = "^2.2.0"
boto3 = "^1.34.140"
sorl-thumbnail = "^12.10.0"
whitenoise = "^6.7.0"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
